FAULT REBASE RECOVERY

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,16 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    sourceSets {
+        main {
+            res {
+                srcDirs 'src/main/res'
+            }
+            java {
+                srcDirs 'src/main/java',  'src/main/java/com.team9.daymate', 'src/main/java/com.team9.daymate/core', 'src/main/java/com.team9.daymate/shop'
+            }
+        }
+    }
 }
 
 dependencies {
