--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Daymate">
-        <activity android:name=".shop.ShopActivity"></activity>
+        <activity android:name=".NavActivity"></activity>
+        <activity android:name=".shop.ShopActivity" />
         <activity android:name=".routines.RoutineActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
