--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.team9.daymate">
 
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,7 +11,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Daymate">
-        <activity android:name=".NavActivity"></activity>
+
+
+        <activity
+            android:name=".notification.NotificationActivity"
+            android:label="@string/title_activity_notification" />
+        <activity android:name=".NavActivity" />
         <activity android:name=".shop.ShopActivity" />
         <activity android:name=".routines.RoutineActivity">
             <intent-filter>
@@ -18,6 +25,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
     </application>
 
 </manifest>
